# ProyUnoLenguajes

./: Makefile  README.md  client  client.cpp  server  server.cpp
config/: config.json
data/: messages.json  users.json
include/: client.hpp  common.hpp  message.hpp  server.hpp  user.hpp
src/client/: client.cpp  main_client.cpp
src/gui/: CMakeCache.txt  CMakeLists.txt  clientwindow.cpp  clientwindow.h  clientwindow.ui  cmake_install.cmake  gui  main.cpp  mainwindow.cpp  mainwindow.h  occupiedport.cpp  occupiedport.h  occupiedport.ui  registrationwindow.cpp  registrationwindow.h  registrationwindow.ui
src/gui/gui_autogen/: mocs_compilation.cpp
src/gui/gui_autogen/EWIEGA46WW/: moc_clientwindow.cpp.d  moc_mainwindow.cpp.d  moc_registrationwindow.cpp.d
src/server/: main_server.cpp  server.cpp
